--- a/bricks/containers/src/main-view/styles.shadow.css
+++ b/bricks/containers/src/main-view/styles.shadow.css
@@ -1,10 +1,11 @@
 :host {
   --banner-sunk-gap: 36px;
   --banner-sunk-offset: 38px;
+  --local-content-gap: var(--card-content-gap);
 
   display: flex;
   flex-direction: column;
-  gap: var(--card-content-gap);
+  gap: var(--local-content-gap);
   padding: var(--page-padding-top) var(--page-padding-right)
     var(--page-padding-bottom) var(--page-padding-left);
   position: relative;
@@ -15,7 +16,7 @@
 }
 
 :host([content-gap="small"]) {
-  gap: 8px;
+  --local-content-gap: 8px;
 }
 
 eo-banner {
@@ -55,7 +56,7 @@ eo-banner {
 }
 
 :host([banner-sunk]) {
-  gap: 0;
+  --local-content-gap: 0;
 }
 
 :host([banner-sunk]) eo-banner {
@@ -99,4 +100,24 @@ eo-banner {
 
 :host([show-footer]) .footer {
   display: block;
+}
+
+/* https://github.com/w3c/csswg-drafts/issues/3559#issuecomment-1758459996 */
+@supports not (inset: 0) {
+  :host,
+  :host([content-gap="small"]) {
+    gap: 0;
+  }
+
+  :host(:not([banner-sunk])) .content,
+  .footer {
+    margin-top: var(--local-content-gap);
+  }
+
+  .toolbar,
+  .footer > eo-narrow-view {
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: start;
+  }
 }
