--- a/bricks/nav/src/launchpad-button-v2/styles.shadow.css
+++ b/bricks/nav/src/launchpad-button-v2/styles.shadow.css
@@ -28,6 +28,7 @@
   color: #999;
   cursor: pointer;
   user-select: none;
+  border-radius: 3px;
 }
 
 .launchpad-button:hover,
@@ -58,7 +59,7 @@
   position: absolute;
   margin-top: 4px;
   z-index: 1;
-  width: 1070px;
+  width: 1110px;
   max-width: calc(100vw - 100px);
   max-height: var(--local-max-height);
   min-height: 50vh;
@@ -209,7 +210,7 @@
 
 .menu-groups,
 .recent-visits {
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(168px, 1fr));
 }
 
 .menu-groups {
