fix(nav-menu): fix submenu overflow

--- a/bricks/nav/src/nav-menu/nav-menu.shadow.css
+++ b/bricks/nav/src/nav-menu/nav-menu.shadow.css
@@ -45,7 +45,7 @@ eo-link {
   color: var(--color-normal-text);
 }
 .popover.subprime {
-  display: inline-block;
+  display: block;
   width: 100%;
 }
 .sub-menu-wrapper {
