--- a/bricks/containers/src/banner/styles.shadow.css
+++ b/bricks/containers/src/banner/styles.shadow.css
@@ -1,20 +1,12 @@
 :host {
-  --banner-padding-horizontal: 60px;
-  --banner-padding-vertical: 36px;
-  --banner-title-color: #57689c;
-  --banner-desc-color: #3c4875;
+  --eo-banner-padding-horizontal: 60px;
+  --eo-banner-padding-vertical: 36px;
 
   display: block;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: var(--banner-padding-vertical) var(--banner-padding-horizontal);
-}
-
-:host-context(html[data-theme="dark-v2"]),
-:host-context([data-override-theme="dark-v2"]) {
-  --banner-title-color: rgba(255, 255, 255, 0.85);
-  --banner-desc-color: rgba(255, 255, 255, 0.65);
+  padding: var(--eo-banner-padding-vertical) var(--eo-banner-padding-horizontal);
 }
 
 :host([hidden]) {
@@ -37,11 +29,11 @@
 }
 
 .page-title {
-  color: var(--banner-title-color);
+  color: var(--eo-banner-title-color);
 }
 
 .page-desc {
-  color: var(--banner-desc-color);
+  color: var(--eo-banner-desc-color);
 }
 
 /* https://github.com/w3c/csswg-drafts/issues/3559#issuecomment-1758459996 */
