--- a/bricks/presentational/src/descriptions/descriptions.shadow.css
+++ b/bricks/presentational/src/descriptions/descriptions.shadow.css
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  border-bottom: 1px solid var(--description-border-bottom-color);
 }
 
 :host([hidden]) {
@@ -40,9 +39,13 @@
   margin-bottom: 8px;
 }
 
+.description-content.bordered {
+  border-top: 1px solid var(--antd-border-color-split);
+}
 .description-item.bordered {
   box-sizing: border-box;
-  border: 1px solid var(--antd-border-color-split);
+  border-left: 1px solid var(--antd-border-color-split);
+  border-bottom: 1px solid var(--antd-border-color-split);
 }
 
 .description-item.horizontal.bordered > span:first-child {
