--- a/bricks/containers/src/modal/modal.shadow.css
+++ b/bricks/containers/src/modal/modal.shadow.css
@@ -12,7 +12,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: var(--antd-modal-mask-bg);
+  background: var(--mask-bg);
   z-index: 1000;
 }
 
@@ -33,7 +33,9 @@
   background-color: var(--antd-component-background);
   border: 1px solid var(--palette-gray-5);
   border-radius: 4px;
-  box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
+  box-shadow:
+    0 3px 6px -4px rgb(0 0 0 / 12%),
+    0 6px 16px 0 rgb(0 0 0 / 8%),
     0 9px 28px 8px rgb(0 0 0 / 5%);
 }
 
@@ -74,7 +76,7 @@
 
 .modal-footer {
   padding: 10px 24px;
-  background-color: var(--antd-modal-footer-bg);
+  background-color: var(--color-fill-bg-base-3);
   text-align: right;
 }
 
