chore(): update app-bar box-shadow

--- a/bricks/basic/src/app-bar-wrapper/styles.shadow.css
+++ b/bricks/basic/src/app-bar-wrapper/styles.shadow.css
@@ -13,7 +13,7 @@
 .app-bar {
   position: relative;
   z-index: 1000;
-  box-shadow: var(--connected-overlay-shadow);
+  box-shadow: var(--top-nav-shadow);
 }
 
 .app-bar.fixed,
