--- a/bricks/presentational/src/statistics-card/styles.shadow.css
+++ b/bricks/presentational/src/statistics-card/styles.shadow.css
@@ -79,6 +79,7 @@
 }
 
 .icon-container {
+  flex-shrink: 0;
   width: var(--icon-container-size);
   height: var(--icon-container-size);
   display: flex;
@@ -92,6 +93,7 @@
 }
 
 .basic-info {
+  min-width: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -107,7 +109,8 @@
 }
 
 .value-container {
-  line-height: 0;
+  display: flex;
+  align-items: baseline;
 }
 
 .value {
@@ -115,6 +118,9 @@
   line-height: var(--value-line-height);
   color: var(--text-color-title);
   font-weight: var(--font-weight-500);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .unit {
