--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -1,6 +1,9 @@
 :host {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   --local-card-border: 1px solid var(--card-item-border-color);
+  --local-cover-border-bottom: 1px solid var(--card-item-border-color);
+  --local-box-shadow: 0 0 0 1px var(--card-item-border-color);
   --local-card-hovered-border: none;
   --local-card-background-color: var(--card-item-bg);
   --local-card-hovered-background-color: var(--card-item-hover-bg);
@@ -16,12 +19,13 @@
 
 :host([style-type="grayish"]) {
   --local-card-border: 1px solid transparent;
+  --local-box-shadow: 0 0 0 1px transparent;
   --local-card-hovered-border: 1px solid transparent;
   --local-card-background-color: #f6f8fa;
   --local-card-hovered-background-color: var(--color-fill-bg-container-1);
   --local-card-hovered-box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
   --local-card-title-color: var(--color-header-text);
-  --local-card-hovered-title-color: var(--color-header-text);
+  --local-card-hovered-title-color: var(--color-brand);
   --local-card-description-color: var(--color-secondary-text);
   --local-card-icon-box-shadow: 0px 2px 4px 0px rgba(26, 122, 255, 0.08);
   --local-card-hovered-icon-box-shadow: none;
@@ -59,7 +63,7 @@ eo-link {
 .card-wrapper {
   position: relative;
   background: var(--local-card-background-color);
-  border: var(--local-card-border);
+  box-shadow: var(--local-box-shadow); /* simulate boarder */
   border-radius: var(--larger-border-radius);
   transition: var(--card-transition);
   overflow: hidden;
@@ -70,7 +74,6 @@ eo-link {
 .card-wrapper:hover {
   box-shadow: var(--local-card-hovered-box-shadow);
   background: var(--local-card-hovered-background-color);
-  border: var(--local-card-hovered-border);
 }
 
 /* header */
@@ -92,6 +95,7 @@ eo-link {
 }
 
 /* operator */
+:host([cover-image]) .operator,
 :host(:not([has-header])) .operator {
   position: absolute;
   top: 6px;
@@ -107,6 +111,7 @@ eo-link {
   display: flex;
   gap: 12px;
   padding: 0 16px 16px 16px;
+  align-items: center;
 }
 
 .card-avatar {
@@ -142,10 +147,9 @@ eo-link {
 
 .card-title {
   margin-bottom: 3px;
-  font-size: 14px;
+  font-size: var(--normal-font-size);
   font-weight: var(--font-weight-500);
   color: var(--local-card-title-color);
-  line-height: 20px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -156,9 +160,8 @@ eo-link {
 }
 
 .card-description {
-  font-size: 12px;
+  font-size: var(--sub-title-font-size-small);
   color: var(--local-card-description-color);
-  line-height: 17px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -188,4 +191,27 @@ eo-link {
   align-items: center;
   justify-content: space-between;
   padding: 0 16px 10px 16px;
+}
+
+.card-cover-wrapper {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* keep aspect ratio 16:9 */
+  background-color: #f2f5fa; /* TODO: dark theme, should use params */
+  border-bottom: var(--local-cover-border-bottom);
+}
+
+.card-cover-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
