fix(): 操作按钮区域错误
refs STORE-27

--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -96,6 +96,7 @@ eo-link {
 
 /* operator */
 :host([cover-image]) .operator,
+:host([cover-color]) .operator,
 :host(:not([has-header])) .operator {
   position: absolute;
   top: 6px;
